# SentinelUZ

./: .gitignore  CLAUDE.md  README.md  basic_scaner.py  docker-compose.yml
.claude/commands/: build-agent.md  docker-check.md  generate-token.md  run-agent.md  run-tests.md  ti-sync.md
.claude/skills/: RESOLVED_CONFLICTS.md  backend.md  cpp-agent.md  documenter.md  frontend.md
docs/: Demo_Script.md  IMPLEMENTATION_SUMMARY.md  Integration_Test_Report.md  QUICK_REFERENCE_v2.txt  SESSION_LOG.md  System_Status_Report.md  Viva_Quick_Reference.md
docs/appendices/demo/: BLOODY_WOLF_DEMO_SCRIPT.md
docs/appendices/diagrams/: A1_use_case_all_roles.puml  A2_use_case_threat_actor.puml  A3_activity_agent_pipeline.puml  A4_activity_alert_triage.puml  A5_sequence_agent_registration.puml  A6_sequence_bloody_wolf_demo.puml  A7_deployment_architecture.puml  A8_class_models.puml
edr_client/: CMakeLists.txt
edr_client/include/: behavior_monitor.h  log_collector.h  network_client.h  port_info.h  port_scanner.h  process_info.h  process_scanner.h  suspicious_activity.h
edr_client/src/: behavior_monitor.cpp  log_collector.cpp  main.cpp  network_client.cpp  port_scanner.cpp  process_scanner.cpp
edr_client/tests/: test_client.cpp
edr_server/: .env.example  requirements.txt
edr_server/edr_app/: admin.py  apps.py  context_processors.py  models.py  query_parser.py  serializers.py  tests.py  tests_phase4.py  urls.py  utils.py  views.py
edr_server/edr_app/migrations/: 0001_initial.py  0002_port_service_name_port_service_version_and_more.py  0003_log.py  0004_windowseventlog.py  0005_client_auth_token_client_is_active.py  0006_command.py  0007_process_is_lolbin_process_is_suspicious_chain_and_more.py  0008_suspiciousactivity_event_count_and_more.py  (+12 more)
edr_server/edr_server/: asgi.py  settings.py  urls.py  wsgi.py
(+35 files in other folders)
